--- a/m1/w2/d4/start2/frase.html
+++ b/m1/w2/d4/start2/frase.html
@@ -20,9 +20,9 @@
 					<br>
 					ed un pizzico di originalità
 					<span class="parole">
-						<i class="text-animated-one">interfacce web</i>
-						<i class="text-animated-two">single page app</i>
-						<i class="text-animated-three">app native</i>
+						<i>interfacce web</i>
+						<i>single page app</i>
+						<i>app native</i>
 					</span>
 				</p>
 			</div>
