--- a/m2/w2/d2/index.html
+++ b/m2/w2/d2/index.html
@@ -11,7 +11,7 @@
   <body>
 
     <nav class="navbar navbar-expand-lg navbar-light">
-        <div class="container-fluid bg-secondary bg-gradient">
+        <div class="container-fluid bg-dark bg-gradient">
           <a class="navbar-brand" href="#"><img src="https://seeklogo.com/images/M/msi-logo-6A5602A14D-seeklogo.com.png" alt=""></a>
           <ul class="nav">
             <li class="nav-item">
@@ -31,7 +31,7 @@
     </nav>
 
     <div class="container col-xxl-8 px-4 py-5">
-        <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+        <div class="row flex-lg-row- align-items-center g-5 py-5">
           <div class="col-10 col-sm-8 col-lg-6">
             <img src="https://www.filippocoltro.it/kimg/1000/400/progettare-gaming-room.jpg" class="d-block mx-lg-auto img-fluid" alt="immagine" width="700" height="500" loading="lazy">
           </div>
