--- a/m2/w3/d3/index.html
+++ b/m2/w3/d3/index.html
@@ -7,12 +7,20 @@
     <title>Document</title>
 </head>
 <body>
- 
-    
+  <h2 id="titolo"></h2> 
+<form>
+    <input type="text" id="first" placeholder="">
+    <input type="button" value="scrivi" id="scrivi">
+    <input type="button" value="cancella" id="cancella">
+</form>
 
 
+<form action="">
+    <input type="button" value="scriviLocal" id="write">
+    <input type="button" value="cancellaLocal" id="delete">
+</form>
 
-
-<script src="JS/script.js"></script>    
+<h2 id="timer"></h2>
+    <script src="script/script.js"></script>
 </body>
 </html>
